--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   font-family: "roboto";
 }
@@ -10,6 +11,7 @@ html, body {
 
 a {
   text-decoration: none;
+  color: #fff;
 }
 
 img {
@@ -23,8 +25,80 @@ img {
 }
 
 .header {
+  position: absolute;
   height: 62px;
-  background-color: rgb(222, 54, 54);
+  width: 100%;
+  top: 10px;
+}
+.header_flex {
+  display: flex;
+  align-items: center;
+}
+.header_ul {
+  display: flex;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+  list-style-type: none;
+  width: 100%;
+}
+.header_ul_li {
+  margin-left: 24px;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.13;
+  text-align: left;
+  color: #fff;
+}
+.header_search {
+  width: 33px;
+  height: 33px;
+  border-radius: 100em;
+  border: none;
+  opacity: 0.2;
+  background-color: #fff;
+  background-image: url(/img/Лупа.png);
+}
+.header_search:hover {
+  width: 100px;
+  height: 33px;
+  margin-left: 10px;
+  align-items: center;
+  border: 2px solid transparent;
+  border-radius: 100em;
+  display: flex;
+  font-weight: 600;
+  position: relative;
+  transition: 0.2s ease;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  text-align: right;
+  color: #fff;
+}
+
+.button {
+  width: 120px;
+  height: 33px;
+  margin-left: 10px;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  border-radius: 100em;
+  transition: 0.2s ease;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  color: #fff;
+}
+.button_href {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+}
+.button_icon {
+  color: #fff;
+  margin-right: 8px;
 }
 
 .promo {
