--- a/css/blocks/_header.scss
+++ b/css/blocks/_header.scss
@@ -1,8 +1,8 @@
 .header {
-    position: absolute;
+    margin-top: 10px;
     height: 62px;
     width: 100%;
-    top: 10px;
+    
     &_flex {
         display: flex;
         align-items: center;
