--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@ html, body {
     margin: 0px;
     padding: 0px;
     position: relative;
+    background-color: #849d8f;
 }
 
 a {
@@ -33,7 +34,7 @@ img {
 @import 'blocks/about';
 @import 'blocks/map';
 @import 'blocks/footer';
-
+@import 'blocks/card';
 
 
 
