upd block icecream

--- a/css/blocks/_icecream.scss
+++ b/css/blocks/_icecream.scss
@@ -1,4 +1,41 @@
 .icecream {
     height: 400px;
-    background-color: rgb(212, 181, 44);
+    &_flex {
+        display: flex;
+        justify-content: space-between;
+        height: 400px;
+    }
+    &_item {
+        position: relative;
+        width: 267px;
+        margin-top: 40px;
+        &_hit {
+            &::after {
+                content: "";
+                background-image: url(/img/ХИТ.png);
+            }
+        }
+        &_price {
+            position: absolute;
+            text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
+            font-size: 45px;
+            font-weight: bold;
+            line-height: 45px;
+            text-align: left;
+            color: #fff;
+            top: 160px;
+            span {
+                font-size: 25px;
+            }
+        }
+        &_p {
+            font-size: 17px;
+            font-weight: 500;
+            line-height: 21.5px;
+            text-align: center;
+            color: #fff;
+        }
+
+        
+    }
 }
