--- a/css/blocks/_about.scss
+++ b/css/blocks/_about.scss
@@ -1,4 +1,109 @@
 .about {
-    height: 550px;
-    background-color: rgb(58, 44, 212);
+    height: 570px;
+    &_flex {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    &_whois {
+        background-color: rgb(255, 247, 183);
+        width: 1146px;
+        height: 306px;
+        border-radius: 15px;
+        
+        &_title {
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 30px;
+            text-align: left;
+            color: #323232;
+            margin: 25px 25px 10px;
+        }
+        &_content {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin: 0 25px 25px;
+        }
+        &_item {
+            display: flex;
+            width: 540px;
+            align-items: center;
+            
+            &_icon {
+                margin-right: 10px;
+                img {
+                    width: 50px;
+                    height: 50px;
+                }
+                
+            }
+            &_p {
+                width: 500px;
+                font-size: 16px;
+                font-style: normal;
+                line-height: 22px;
+                text-align: left;
+                color: #323232;
+                margin: 0;
+                margin-top: 15px;
+            }
+        }
+    }
+    &_blog {
+        background-color: #fff;
+        width: 560px;
+        height: 220px;
+        border-radius: 15px;
+        margin-top: 40px;
+        
+        &_title {
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 22px;
+            text-align: left;
+            color: #323232;
+            margin: 25px 25px 5px;
+        }
+        &_subtitle {
+            font-size: 24px;
+            font-weight: bold;
+            line-height: 30px;
+            text-align: left;
+            color: #323232;
+            margin: 0 25px;
+            text-decoration: underline;
+        }
+    }
+    &_mail {
+        background-color: #fff;
+        width: 560px;
+        height: 220px;
+        border-radius: 15px;
+        margin-top: 40px;
+        &_p {
+            font-size: 16px;
+            font-style: normal;
+            line-height: 22px;
+            text-align: left;
+            color: #5a5a5a;
+            margin: 30px;
+        }
+        &_input {
+            width: 350px;
+            height: 44px;
+            border-radius: 5px;
+            border: solid 1px rgba(178, 178, 178, 0.52);
+            background-color: #fff;
+            margin-top: 10px;
+            margin-left: 30px;
+        }
+        &_button {
+            width: 130px;
+            height: 44px;
+            box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
+            background-image: linear-gradient(to top, #e74a35, #f26843);
+        }
+    }
+    
 }
