--- a/css/blocks/_map.scss
+++ b/css/blocks/_map.scss
@@ -1,4 +1,68 @@
 .map {
+    position: relative;
     height: 430px;
-    background-color: rgb(212, 44, 184);
+    &_goole {
+        position: relative;
+        z-index: 0;
+    }
+    &_box {
+        position: absolute;
+        top: -370px;
+        right: 0;
+        z-index: 1;
+        width: 302px;
+        height: 305px;
+        background-color: #fff;
+        border-radius: 15px;
+        &_adrtitle {
+            margin: 32px 25px 0;
+            font-size: 14px;
+            font-weight: normal;
+            line-height: 20px;
+            text-align: left;
+            color: #323232;
+        }
+        &_adr {
+            margin: 5px 25px 0;
+            font-size: 18px;
+            font-weight: bold;
+            line-height: 24px;
+            text-align: left;
+            color: #323232;
+        }
+        &_phonetitle {
+            margin: 15px 25px 0;
+            font-size: 14px;
+            line-height: 20px;
+            text-align: left;
+            color: #323232;
+        }
+        &_phone {
+            margin: 5px 25px 0;
+            font-size: 18px;
+            font-weight: bold;
+            line-height: 22px;
+            text-align: left;
+            color: #323232;
+        }
+        &_subphone {
+            margin: 5px 25px 0;
+            font-size: 14px;
+            line-height: 20px;
+            text-align: left;
+            color: #323232;
+        }
+    }
+    &_button {
+        margin: 25px;
+        width: 84%;
+        height: 44px;
+        box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
+        background-image: linear-gradient(to top, #e74a35, #f26843);
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 24px;
+        text-align: center;
+        color: #fefefe;
+    }
 }
