--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ img {
 }
 
 .about {
-  height: 570px;
+  height: 600px;
 }
 .about_flex {
   display: flex;
@@ -339,8 +339,72 @@ img {
 }
 
 .map {
+  position: relative;
   height: 430px;
-  background-color: rgb(212, 44, 184);
+}
+.map_goole {
+  position: relative;
+  z-index: 0;
+}
+.map_box {
+  position: absolute;
+  top: -370px;
+  right: 0;
+  z-index: 1;
+  width: 302px;
+  height: 305px;
+  background-color: #fff;
+  border-radius: 15px;
+}
+.map_box_adrtitle {
+  margin: 32px 25px 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 20px;
+  text-align: left;
+  color: #323232;
+}
+.map_box_adr {
+  margin: 5px 25px 0;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 24px;
+  text-align: left;
+  color: #323232;
+}
+.map_box_phonetitle {
+  margin: 15px 25px 0;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: left;
+  color: #323232;
+}
+.map_box_phone {
+  margin: 5px 25px 0;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 22px;
+  text-align: left;
+  color: #323232;
+}
+.map_box_subphone {
+  margin: 5px 25px 0;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: left;
+  color: #323232;
+}
+.map_button {
+  margin: 25px;
+  width: 84%;
+  height: 44px;
+  box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
+  background-image: linear-gradient(to top, #e74a35, #f26843);
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 24px;
+  text-align: center;
+  color: #fefefe;
 }
 
 .footer {
