--- a/css/blocks/_about.scss
+++ b/css/blocks/_about.scss
@@ -1,4 +1,5 @@
 .about {
+    margin-top: 20px;
     height: 600px;
     &_flex {
         display: flex;
@@ -10,7 +11,7 @@
         width: 1146px;
         height: 306px;
         border-radius: 15px;
-        
+        background-image: url(/img/Вафля\ фон.png);
         &_title {
             font-size: 24px;
             font-weight: 500;
@@ -56,7 +57,7 @@
         height: 220px;
         border-radius: 15px;
         margin-top: 40px;
-        
+        background-image: url(/img/Клубничный\ фон.png);
         &_title {
             font-size: 16px;
             font-weight: 500;
@@ -74,14 +75,30 @@
             margin: 0 25px;
             text-decoration: underline;
         }
+        a {
+            color: #323232;
+        }
     }
     &_mail {
+        position: relative;
         background-color: #fff;
         width: 560px;
         height: 220px;
         border-radius: 15px;
         margin-top: 40px;
+        background-image: url(/img/Почтовый-фон.png);
+        &_bc {
+            margin: 7px;
+            position: absolute;
+            z-index: 0;
+            width: 546px;
+            height: 206px;
+            border-radius: 15px;
+            background-color: #f8f7f4;
+        }
         &_p {
+            position: relative;
+            z-index: 1;
             font-size: 16px;
             font-style: normal;
             line-height: 22px;
@@ -90,19 +107,36 @@
             margin: 30px;
         }
         &_input {
+            position: relative;
+            z-index: 1;
             width: 350px;
             height: 44px;
-            border-radius: 5px;
-            border: solid 1px rgba(178, 178, 178, 0.52);
             background-color: #fff;
             margin-top: 10px;
             margin-left: 30px;
+            box-sizing: border-box;
+            padding: 9px 15px;
+            font-size: 16px;
+            line-height: 24px;
+            font-style: normal;
+            font-weight: 700;
+            border: 1px solid #d3d3d2;
+            border-radius: 5px;
+            outline: none;
         }
         &_button {
+            position: relative;
+            z-index: 1;
             width: 130px;
             height: 44px;
             box-shadow: 0px 2px 2px 0 rgba(172, 16, 0, 0.64);
             background-image: linear-gradient(to top, #e74a35, #f26843);
+            
+            font-size: 18px;
+            font-weight: bold;
+            line-height: 24px;
+            text-align: center;
+            color: #fefefe;
         }
     }
     
