--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -12,6 +12,12 @@
     text-align: center;
     color: #fff;
     cursor: pointer;
+    transition: all 0.3s;
+    &:hover {
+        
+        font-weight: bold;
+        background: linear-gradient(to top, #f26843, #e74a35);
+    }
     &_href {
         display: flex;
         align-items: center;
@@ -33,10 +39,7 @@
         text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
         font-size: 32px;
         font-weight: bold;
-        font-stretch: normal;
-        font-style: normal;
         line-height: 1.36;
-        letter-spacing: normal;
         text-align: center;
         color: #fff;
         margin-left: 0;
@@ -54,11 +57,11 @@
         background-image: linear-gradient(to top, #e74a35, #f26843);
         font-size: 18.5px;
         font-weight: bold;
-        font-stretch: normal;
-        font-style: normal;
         line-height: 24.5px;
-        letter-spacing: normal;
         text-align: center;
         color: #fff;
+    }
+    &_text {
+        font-weight: bold;
     }
 }
