--- a/css/blocks/_card.scss
+++ b/css/blocks/_card.scss
@@ -1,26 +1,48 @@
 .card {
     height: 230px;
-    
-    
+    &_raspberry {
+        background-image: url(/img/Малиновый\ фон.png);
+        &_item {
+            &_button {
+            text-align: right;
+            margin: 20px;
+            width: 162px;
+            }
+        }
+
+        
+    }
+    &_chocolate {
+        background-image: url(/img/Шоколадный\ фон.png);
+        &_item {
+            &_button {
+            text-align: right;
+            margin: 20px;
+            width: 190px;
+            }
+        }
+    }
     
     &_advanced {
         width: 1140px;
         display: flex;
         justify-content: space-between;
         &_item {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-end;
             text-align: right;
             width: 560px;
             height: 229px;
             background-color: rgba(255, 255, 255, 0.166);
             border-radius: 15px;
             &_title {
-                margin: 20px;
+                width: 520px;
+                margin: 20px 20px 0;
                 font-size: 35px;
                 font-weight: bold;
-                font-stretch: normal;
-                font-style: normal;
                 line-height: 41px;
-                letter-spacing: normal;
                 text-align: left;
                 color: #fff;
             }
@@ -28,17 +50,11 @@
                 margin: 0 20px;
                 font-size: 18.5px;
                 font-weight: bold;
-                font-stretch: normal;
-                font-style: normal;
                 line-height: 21.5px;
-                letter-spacing: normal;
                 text-align: left;
                 color: #fff;
             }
-            &_button {
-                text-align: right;
-                margin: 0 20px;
-            }
+           
         } 
     }
 }
