--- a/css/blocks/_header.scss
+++ b/css/blocks/_header.scss
@@ -1,8 +1,9 @@
 .header {
+    position: relative;
     margin-top: 10px;
     height: 62px;
     width: 100%;
-    
+    z-index: 1;
     &_flex {
         display: flex;
         align-items: center;
@@ -15,12 +16,31 @@
         width: 100%;
         
         &_li {
-            margin-left: 24px;
             font-size: 16px;
+            padding: 0 10px;
+            height: 33px;
             font-weight: bold;
-            line-height: 1.13;
-            text-align: left;
+            margin-left: 10px;
+            align-items: center;
+            line-height: 2;
+            text-align: center;
             color: #fff;
+            cursor: pointer;
+            &:hover {
+                padding: 0 10px;
+                height: 33px;
+                margin-left: 10px;
+                align-items: center;
+                background: linear-gradient(to top, #f26843, #e74a35);
+                
+                border: none;
+                border-radius: 100em;  
+                transition: 0.2s ease;
+                line-height: 2;
+                text-align: center;
+                color: #fff;
+                font-weight: bold;
+            }
         }
     }
     &_search {
@@ -28,26 +48,19 @@
         height: 33px;
         border-radius: 100em; 
         border: none;
-        opacity: 0.2;
-        background-color: #fff;
+        background-color: rgba(255, 255, 255, 0.2);
         background-image: url(/img/Лупа.png);
+        background-repeat: no-repeat;
+        background-position: center;
         &:hover {
-            width: 100px;
+            width: 350px;
             height: 33px;
-            margin-left: 10px;
-            align-items: center;
-            border: 2px solid transparent;
             border-radius: 100em;    
-            display: flex;
-            font-weight: 600;
-            position: relative;
             transition: 0.2s ease;
             font-size: 14px;
-            font-weight: 500;
-            line-height: 1.14;
-            text-align: right;
-            color: #fff;
-
+            color: rgb(0, 0, 0);
+            background-color: #fff;
+            padding: 0 15px;
         }
     }
 }
