--- a/css/blocks/_icecream.scss
+++ b/css/blocks/_icecream.scss
@@ -4,15 +4,30 @@
         display: flex;
         justify-content: space-between;
         height: 400px;
+        align-items: center;
     }
     &_item {
         position: relative;
         width: 267px;
         margin-top: 40px;
+        transition: all 0.3s;
+        &:hover {
+            background-color: rgba(255, 255, 255, 0.166);
+            border-radius: 15px;
+            padding: 15px;
+        }
         &_hit {
             &::after {
                 content: "";
-                background-image: url(/img/ХИТ.png);
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-image: url(../img/sprite.png);
+                background-position: 0 0;
+                width: 61px;
+                height: 61px;
+                z-index: 10;
             }
         }
         &_price {
