--- a/css/blocks/_map.scss
+++ b/css/blocks/_map.scss
@@ -44,6 +44,9 @@
             line-height: 22px;
             text-align: left;
             color: #323232;
+            a {
+                color: #323232;
+            }
         }
         &_subphone {
             margin: 5px 25px 0;
