--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -64,4 +64,25 @@
     &_text {
         font-weight: bold;
     }
+    &_filter {
+        
+        align-items: center;
+        height: 37px;
+        background-color: #f8f7f420;
+        color: #fff;
+        border: none;
+        border-radius: 100em; 
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 18px;
+        text-align: center;
+        padding: 0;
+        margin-left: 0;
+        &:hover {
+            font-weight: 500;
+        }
+    }
+    &_header {
+        width: 100px;
+    }
 }
